--- a/public/about/index.html
+++ b/public/about/index.html
@@ -20,7 +20,7 @@
         <br /> <br />
         <a class="highlight link" href="/">Try it Out!</a>
         <br />
-        <a class="highlight link" href="#">Source and Documentation</a>
+        <a class="highlight link" href="http://github.com/simonlast/playcreator">Source and Documentation</a>
         <br />
         <a class="highlight link" href="http://simonlast.org">More Projects</a>
       </div>
